# Confulence-VectorDB

./: .env.example  .gitignore  CLAUDE.md  build_package.ps1  embed_pages.py  requirements.txt  search.py  search_hybrid.py  upload_content.py
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: App.jsx  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
backend/: chat.py  embed_pages.py  graph.py  llm.py  nodes.py  prompts.py  retriever.py  search_once.py
content/: index.yaml
content/pages/: 01_company_overview.md  02_vision_mission.md  03_history.md  04_org_chart.md  05_executives.md  06_dev_division.md  07_biz_division.md  08_ops_division.md  09_hr_overview.md  10_work_rules.md  11_work_hours.md  12_remote_work.md  13_vacation.md  14_benefits_overview.md  15_health.md  16_education.md  17_meal_transport.md  18_onboarding.md  19_first_week.md  20_probation.md  21_it_overview.md  22_network_overview.md  23_office_network.md  24_vpn.md  25_servers.md  26_dev_env_overview.md  27_local_setup.md  28_git_strategy.md  29_cicd.md  30_security_overview.md  31_password_policy.md  32_access_control.md  33_product_overview.md  34_nexusbot_overview.md  35_architecture.md  36_api_reference.md  37_deployment.md  38_data_pipeline_overview.md  39_data_collection.md  40_model_training.md
